--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -54,7 +54,21 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem 10%;
+  padding: 1.5rem 10rem;
+}
+
+header nav {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .headerHr {
+  display: none;
 }
 
 header .mainNav {
@@ -80,6 +94,80 @@ header .mainNav .mainNavLink:hover, header .mainNav .mainNavLink:active, header 
 
 header .mainNav .mainNavLink a:visited {
   color: #000;
+}
+
+header .openMenu, header .closeMenu {
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  header {
+    padding: 1.75rem 2.5rem;
+  }
+  header .mainNav {
+    gap: 2rem;
+  }
+}
+
+@media (max-width: 700px) {
+  header {
+    background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 2rem;
+  }
+  header nav, header .headerBtn {
+    display: none;
+  }
+  header nav {
+    width: 100%;
+  }
+  header .headerBtn {
+    width: 100%;
+    font-size: 15px;
+    letter-spacing: 2.5px;
+  }
+  header .headerIcons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+  header .headerHr {
+    display: block;
+  }
+  header .openMenu {
+    display: block;
+  }
+  header .mainNav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    padding: 2rem;
+    border-bottom: 1px solid #000;
+    -webkit-transition: top 1s ease;
+    transition: top 1s ease;
+  }
+  header .mainNav .mainNavLink {
+    font-size: 15px;
+    letter-spacing: 2.5px;
+  }
 }
 
 footer {
@@ -181,7 +269,7 @@ footer .rights p {
 
 @media (max-width: 1000px) {
   footer {
-    min-height: 40vh;
+    min-height: 350px;
     -ms-grid-columns: 1.5fr 1fr;
         grid-template-columns: 1.5fr 1fr;
     -ms-grid-rows: 1fr 2fr;
@@ -510,12 +598,12 @@ footer .rights p {
   background-repeat: no-repeat;
   position: relative;
   top: 0;
-  -webkit-transition: top ease-in-out 0.5s;
-  transition: top ease-in-out 0.5s;
+  -webkit-transition: top ease 0.5s;
+  transition: top ease 0.5s;
 }
 
 .imgCards .imgCard:hover, .imgCards .imgCard:focus, .imgCards .imgCard:active {
-  top: -20px;
+  top: -30px;
   border-bottom: 10px solid transparent;
   -o-border-image: linear-gradient(90deg, #FFC593, #BC7198, #5A77FF);
      border-image: -webkit-gradient(linear, left top, right top, from(#FFC593), color-stop(#BC7198), to(#5A77FF));
@@ -885,7 +973,7 @@ footer .rights p {
     padding: 15% 2.5rem 0 2.5rem;
   }
   .heroStories .storiesHeroText {
-    max-width: 400;
+    max-width: 85%;
   }
 }
 
@@ -900,6 +988,10 @@ footer .rights p {
 .hero .imageSide {
   width: 55%;
   max-width: 55%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 .hero .heroText {
@@ -1035,6 +1127,18 @@ footer .rights p {
           align-items: flex-end;
 }
 
+.featuredMain .featureHome {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+}
+
 .footerBanner {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.5))), url("/assets/shared/desktop/bg-beta.jpg");
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url("/assets/shared/desktop/bg-beta.jpg");
@@ -1062,13 +1166,25 @@ footer .rights p {
 }
 
 @media (max-width: 1000px) {
+  .hero .imageSide {
+    width: 40%;
+    max-width: 40%;
+  }
+  .hero .imageFeatures {
+    -o-object-position: -100px -0px;
+       object-position: -100px -0px;
+  }
+  .hero .heroText {
+    width: 60%;
+    max-width: 60%;
+  }
   .featuredMain {
     -ms-grid-rows: (1fr)[6];
         grid-template-rows: repeat(6, 1fr);
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
-    -webkit-column-gap: 1rem;
-            column-gap: 1rem;
+    -webkit-column-gap: 1.5rem;
+            column-gap: 1.5rem;
     padding: 5rem 2.5rem;
   }
   .featuredMain .responsive {
@@ -1123,6 +1239,7 @@ footer .rights p {
             flex-direction: column;
     text-align: center;
     gap: 1rem;
+    max-width: 90%;
   }
   .footerBanner {
     padding: 5rem 2.5rem;
