--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -85,6 +85,9 @@
   $p: 15px;
   $a: 12px;
 
+  $h1: 32px;
+  $psmall: 13px;
+
   //SectionHeight
   $section75: 80vh;
   $section70: 75vh;
@@ -96,5 +99,5 @@
 
   //Screenstates
   $tablet: 1000px;
-
   $menu: 700px;
+  $mobile: 650px;
