--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -66,3 +66,9 @@ a{
       align-items: center;
   
   }
+
+  .spaceLink{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+  }
