--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -102,3 +102,38 @@ footer{
         }
     }
 }
+
+
+@media (max-width:$mobile) {
+    footer{
+        padding: 4rem 2rem;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 3rem;
+
+        .logoNav{
+            gap: 2rem;
+            align-items: center;
+            .socialLinks{
+                gap: 0.75rem;
+            }
+        }
+        nav{
+            .footerNav{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+
+        .rights{
+            margin-top: 3rem;
+            gap: 2.5rem;
+            align-items: center;
+        }
+
+        
+    }
+}
